--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
+    "uuid": "^7.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
